WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96655
[BLACKBERRY] Mouse events are lost.
https://bugs.webkit.org/show_bug.cgi?id=96655
Summary
[BLACKBERRY] Mouse events are lost.
gmak
Reported
2012-09-13 08:20:49 PDT
If you touch down on a non-scrollable page and move around, mouse events should always be sent unless Touch Move is consumed.
Attachments
patch with commit log
(3.06 KB, patch)
2012-09-13 08:30 PDT
,
gmak
no flags
Details
Formatted Diff
Diff
patch with commit log
(3.07 KB, patch)
2012-09-13 10:02 PDT
,
gmak
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
gmak
Comment 1
2012-09-13 08:30:57 PDT
Created
attachment 163883
[details]
patch with commit log
Antonio Gomes
Comment 2
2012-09-13 08:36:38 PDT
Comment on
attachment 163883
[details]
patch with commit log View in context:
https://bugs.webkit.org/attachment.cgi?id=163883&action=review
> Source/WebKit/blackberry/WebKitSupport/TouchEventHandler.cpp:182 > + return viewportSize.width() < contentsSize.width() && viewportSize.height() < contentsSize.height();
do we want || here? so it can be scrollable in one direction only...
> Source/WebKit/blackberry/WebKitSupport/TouchEventHandler.cpp:280 > + if (isMainFrameScrollable(m_webPage->viewportSize(), m_webPage->contentsSize()))
Given the function name I would rather pass the m_webPage object, and check all inside. Also, maybe we want actualVisibleViewportSize?
gmak
Comment 3
2012-09-13 10:02:28 PDT
Created
attachment 163896
[details]
patch with commit log
WebKit Review Bot
Comment 4
2012-09-13 10:05:05 PDT
Attachment 163896
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Sou..." exit_code: 1 Source/WebKit/blackberry/WebKitSupport/TouchEventHandler.cpp:278: Extra space before ) in if [whitespace/parens] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antonio Gomes
Comment 5
2012-09-13 10:05:21 PDT
Comment on
attachment 163896
[details]
patch with commit log View in context:
https://bugs.webkit.org/attachment.cgi?id=163896&action=review
> Source/WebKit/blackberry/WebKitSupport/TouchEventHandler.cpp:280 > + if (isMainFrameScrollable(m_webPage) || m_webPage->m_inRegionScroller->d->isActive() )
extra spcace before last )
WebKit Review Bot
Comment 6
2012-09-13 10:28:58 PDT
Comment on
attachment 163896
[details]
patch with commit log Clearing flags on attachment: 163896 Committed
r128479
: <
http://trac.webkit.org/changeset/128479
>
WebKit Review Bot
Comment 7
2012-09-13 10:29:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug