Continue to send mouse move events to a non-scrollable page even if they are not consumed. PR #207024 https://bugs.webkit.org/show_bug.cgi?id=96655

Patch by Genevieve Mak <gmak@rim.com> on 2012-09-13
Reviewed by Antonio Gomes.

* WebKitSupport/TouchEventHandler.cpp:
(BlackBerry::WebKit::isMainFrameScrollable):
(WebKit):
(BlackBerry::WebKit::TouchEventHandler::handleTouchPoint):

Canonical link: https://commits.webkit.org/114565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128479 268f45cc-cd09-0410-ab3c-d52691b4dbfc